<resources>
    <string name="ApplicationName">Tint Browser</string>
    <string name="ApplicationDescription">Tint Browser is an open-source browser for Android.</string>
    <string name="AboutVersionText">Version: %1$s (%2$s)</string>
    <string name="AboutLicenseText">License: GPLv3</string>
    <string name="AboutUrlText">https://github.com/Anasthase/TintBrowser</string>
    <string name="PermissionReadBookmarksLabel">Read Tint Browser bookmarks</string>
    <string name="PermissionReadBookmarksDescription">Allow third-party applications or addons to read Tint Browser\'s history and bookmarks database.</string>
	<string name="PermissionWriteBookmarksLabel">Write Tint Browser bookmarks</string>
    <string name="PermissionWriteBookmarksDescription">Allow third-party applications or addons to write Tint Browser\'s history and bookmarks database.</string>
    <string name="PermissionBindAddonServiceLabel">Bind Tint Browser addons services</string>
    <string name="PermissionBindAddonServiceDescription">Allow an application to bind to Tint Browser\'s addons services. Only Tint Browser itself should have this permission.</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="On">ON</string>
    <string name="Off">OFF</string>
    <string name="Clear">Clear</string>
    <string name="Continue">Continue</string>
    <string name="Proceed">Proceed</string>
    <string name="VideoLoading">Loading video\u2026</string>
    <string name="History">History</string>
    <string name="All">All</string>
    <string name="Bookmarks">Bookmarks</string>
    <string name="Preferences">Settings</string>
    <string name="UrlBarUrlDefaultSubTitle">Tap to enter an URL or a search.</string>
    <string name="UrlBarUrlHint">Enter a search or an URL</string>
    <string name="ShareChooserTitle">Share via</string>
    <string name="FileChooserPrompt">Choose file for upload</string>
    <string name="Download">Download</string>
    <string name="DownloadDialogTitle">Download</string>
    <string name="DownloadInIncognito">Incognito download</string>
    <string name="DownloadStart">Downloading %1$s&#8230;</string>
    <string name="DownloadComplete">Download complete.</string>
    <string name="DownloadFailedWithErrorMessage">Download failed: %1$s.</string>
    <string name="DownloadErrorDisk">Disk error, check if you have a storage media, and if it has enough space left.</string>
    <string name="DownloadErrorHttp">HTTP error</string>
    <string name="DownloadErrorRedirection">Too many redirections</string>
    <string name="DownloadErrorUnknown">Unknown error</string>
    <string name="ContextMenuOpen">Open</string>
    <string name="ContextMenuOpenNewTab">Open in a new tab</string>
    <string name="ContextMenuCopyLinkUrl">Copy link URL</string>
    <string name="ContextMenuDownload">Download</string>
    <string name="ContextMenuShareLinkUrl">Share link</string>
    <string name="ContextMenuViewImage">View image</string>
    <string name="ContextMenuCopyImageUrl">Copy image url</string>
    <string name="ContextMenuDownloadImage">Download image</string>
    <string name="ContextMenuShareImageUrl">Share image</string>
    <string name="ContextMenuSendEmail">Send email</string>
    <string name="ContextMenuCopyEmailUrl">Copy email url</string>
    <string name="ContextMenuShareEmailUrl">Share email</string>
    <string name="UrlCopyToastMessage">Url copied to clipboard.</string>
    <string name="ContextMenuShareUrl">Share</string>
    <string name="JavaScriptAlertDialog">JavaScript alert dialog</string>
    <string name="JavaScriptConfirmDialog">JavaScript confirm dialog</string>
    <string name="JavaScriptPromptDialog">JavaScript prompt dialog</string>
	<string name="SslWarning">Security warning</string>
	<string name="SslWarningsHeader">There are problems with the security certificate for this site (%s).</string>
	<string name="SslUntrusted">This certificate is not from a trusted authority.</string>
	<string name="SslIDMismatch">The name of the site does not match the name on the certificate.</string>
	<string name="SslExpired">This certificate has expired.</string>
	<string name="SslNotYetValid">This certificate is not valid yet.</string>
    <string name="NewTab">New tab</string>
    <string name="CloseTab">Close current tab</string>
    <string name="AddBookmark">Add bookmark</string>
    <string name="SharePage">Share page</string>
    <string name="Search">Find on page</string>
    <string name="BookmarksTitle">Bookmarks &amp; History</string>
    <string name="BookmarksTabTitle">Bookmarks</string>
    <string name="HistoryTabTitle">History</string>
    <string name="ImportHistoryBookmarks">Import</string>
    <string name="ExportHistoryBookmarks">Export</string>
    <string name="ClearHistoryBookmarks">Clear</string>
    <string name="AddBookmarkTitle">Add bookmark</string>
    <string name="BookmarkText">Label</string>
    <string name="UrlText">Address</string>
    <string name="PreferenceHeaderGeneralSettingsTitle">General settings</string>
    <string name="PreferenceGeneralHomepageTitle">Home page</string>
    <string name="PreferenceGeneralHomepageSummary">Set the home page to load when opening a new tab, etc.</string>
    <string name="PreferenceHomePageDialogTitle">Home page</string>
    <string name="PreferenceGeneralSearchUrlTitle">Search engine</string>
    <string name="PreferenceGeneralSearchUrlSummary">Set the search engine used to make default search from the url bar.</string>
    <string name="PreferenceCategoryStartPageTitle">Start page</string>
    <string name="PreferenceGeneralStartPageLimitTitle">Number of items in the start page</string>
    <string name="PreferenceGeneralStartPageLimitSummary">Set the number of items to show in the start page.</string>
    <string name="PreferenceCategoryUITitle">User interface</string>
    <string name="PreferenceBubblePositionTitle">Bubble position</string>
    <string name="PreferenceBubblePositionSummary">Position of the bubble allowing to show the toolbars.</string>
    <string name="PreferenceToolbarsAutoHideDurationTitle">Toolbars display duration</string>
    <string name="PreferenceToolbarsAutoHideDurationSummary">Set how long toolbars are shown, in seconds.</string>
    <string name="PreferenceSwitchTabsMethodTitle">Switch tabs method</string>
    <string name="PreferenceSwitchTabsMethodSummary">Set how you can switch between tabs.</string>
    <string name="PreferenceHeaderBrowserSettingsTitle">Browser settings</string>
    <string name="PreferenceEnableJavascriptTitle">Enable JavaScript</string>
    <string name="PreferenceEnableJavascriptSummaryOn">JavaScript is enabled.</string>
    <string name="PreferenceEnableJavascriptSummaryOff">JavaScript is disabled.</string>
    <string name="PreferenceEnableImagesTitle">Enable images</string>
    <string name="PreferenceEnableImagesSummary">Check if you want to load images.</string>
    <string name="PreferenceUseWideViewportTitle">Use wide view port</string>
    <string name="PreferenceUseWideViewportSummary">If checked, browser will use a viewport similar to desktop browsers.</string>
    <string name="PreferenceLoadPagesWithOverviewTitle">Load pages with overview</string>
    <string name="PreferenceLoadPagesWithOverviewSummary">Check if you want to load pages zoomed out to show an overview of the page.</string>
    <string name="PreferencePluginsTitle">Enable plugins</string>
    <string name="PreferencePluginsSummary">Choose how to manage plugins.</string>
    <string name="PreferenceUserAgentTitle">User-agent</string>
    <string name="PreferenceUserAgentSummary">Set the user-agent string used by the browser.</string>
    <string name="PreferenceUserAgentDialogTitle">User-agent</string>
    <string name="PreferenceHeaderPrivacySettingsTitle">Privacy &amp; security settings</string>
    <string name="PreferencePrivacyClearCacheTitle">Clear cache</string>
    <string name="PreferencePrivacyClearCacheSummary">Clear locally cached content and databases.</string>
    <string name="PreferenceCategoryHistoryTitle">History</string>
    <string name="PreferencePrivacyHistorySizeTitle">History size</string>
    <string name="PreferencePrivacyHistorySizeSummary">Define the history size, in days.</string>
    <string name="PreferencePrivacyClearHistoryTitle">Clear history</string>
    <string name="PreferencePrivacyClearHistorySummary">Clear the browser navigation history.</string>
    <string name="PreferenceCategoryCookiesTitle">Cookies</string>
    <string name="PreferencePrivacyAcceptCookiesTitle">Accept cookies</string>
    <string name="PreferencePrivacyAcceptCookiesSummary">Allow sites to save and read cookie data.</string>
    <string name="PreferencePrivacyClearCookiesTitle">Clear cookies</string>
    <string name="PreferencePrivacyClearCookiesSummary">Clear all browser cookies.</string>
    <string name="PreferenceCategoryGeolocationTitle">Location</string>
    <string name="PreferencePrivacyEnableGeolocationTitle">Enable location</string>
    <string name="PreferencePrivacyEnableGeolocationSummary">Allow sites to request access to your location.</string>
    <string name="PreferencePrivacyClearGeolocationTitle">Clear location access</string>
    <string name="PreferencePrivacyClearGeolocationSummary">Clear location access for all websites.</string>
    <string name="PreferenceCategoryFormDataTitle">Form Data</string>
    <string name="PreferencePrivacyRememberFormDataTitle">Remember form data</string>
    <string name="PreferencePrivacyRememberFormDataSummary">Remember data i type in forms for later use.</string>
    <string name="PreferencePrivacyClearFormDataTitle">Clear form data</string>
    <string name="PreferencePrivacyClearFormDataSummary">Clear all saved form data.</string>
    <string name="PreferenceCategoryPasswordsTitle">Passwords</string>
    <string name="PreferencePrivacyRememberPasswordsTitle">Remember passwords</string>
    <string name="PreferencePrivacyRememberPasswordsSummary">Save usernames and passwords for websites.</string>
    <string name="PreferencePrivacyClearPasswordsTitle">Clear passwords</string>
    <string name="PreferencePrivacyClearPasswordsSummary">Clear all saved passwords.</string>
    <string name="PreferencePrivacyWebsitesSettingsTitle">Websites settings</string>
    <string name="PreferencePrivacyWebsitesSettingsSummary">Advanced settings for individual websites.</string>
    <string name="PreferencePrivacyIncognitoTitle">Incognito mode</string>
    <string name="PreferencePrivacyIncognitoDefaultTitle">Incognito by default</string>
    <string name="PreferencePrivacyIncognitoDefaultSummary">Open new tabs in incognito mode</string>
    <string name="ClearCacheMessage">Delete locally cached content and databases?</string>
    <string name="ClearHistoryMessage">Delete the browser navigation history?</string>
    <string name="ClearCookiesMessage">Delete all cookies?</string>
    <string name="ClearGeolocationMessage">Clear websites location access?</string>
    <string name="ClearFormDataMessage">Delete all saved form data?</string>
    <string name="ClearPasswordsMessage">Delete all saved passwords?</string>
    <string name="PreferenceHeaderAddonsTitle">Addons</string>
    <string name="PreferenceHeaderAboutTitle">About</string>
    <string name="ContentDescriptionApplicationIcon">Application icon</string>
    <string name="PreferenceCategoryTextSizeTitle">Text size</string>
    <string name="PreferenceSslExceptionsTitle">SSL security exceptions</string>
    <string name="PreferenceSslExceptionsSummary">List of SSL security exceptions by websites.</string>
    <string name="SortBookmarks">Sort bookmarks</string>
    <string name="AboutChangelogTitle">Changelog</string>
    <string name="AboutContributorsTitle">Contributors</string>
    <string name="AboutLicensesTitle">Other licenses</string>
</resources>