<?xml version="1.0" encoding="utf-8"?>

<!--
   Tint Browser for Android
  
   Copyright (C) 2012 - to infinity and beyond J. Devauchelle and contributors.
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
   version 3 as published by the Free Software Foundation.
 
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
	    android:id="@+id/BookmarksActivityMenuAddBookmark"
	    android:title="@string/AddBookmark"
	    android:icon="@drawable/ic_add_bookmark"
	    android:showAsAction="ifRoom|withText" />
    
    <item
	    android:id="@+id/BookmarksActivityMenuSortBookmarks"
	    android:title="@string/SortBookmarks" />
    
    <item
	    android:id="@+id/BookmarksActivityMenuImportHistoryBookmarks"
	    android:title="@string/ImportHistoryBookmarks" />
    
    <item
	    android:id="@+id/BookmarksActivityMenuExportHistoryBookmarks"
	    android:title="@string/ExportHistoryBookmarks" />
    
    <item
	    android:id="@+id/BookmarksActivityMenuClearHistoryBookmarks"
	    android:title="@string/ClearHistoryBookmarks" />    
    
    <group
        android:id="@+id/BookmarksActivity.AddonsMenuGroup" />

</menu>