<?xml version="1.0" encoding="utf-8"?>

<!--
   Tint Browser for Android
  
   Copyright (C) 2012 - to infinity and beyond J. Devauchelle and contributors.
 
   This program is free software; you can redistribute it and/or
   modify it under the terms of the GNU General Public License
   version 3 as published by the Free Software Foundation.
 
   This program is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 -->

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
	    android:id="@+id/MainActivity.MenuCloseTab"
	    android:title="@string/AddBookmark"
	    android:icon="@android:drawable/ic_menu_close_clear_cancel"
	    android:showAsAction="always" />
    
    <item
	    android:id="@+id/MainActivity.MenuAddTab"
	    android:title="@string/AddBookmark"
	    android:icon="@android:drawable/ic_menu_add"
	    android:showAsAction="always" />
    
    <item
	    android:id="@+id/MainActivity.MenuAddBookmark"
	    android:title="@string/AddBookmark"
	    android:icon="@android:drawable/ic_menu_preferences"/>
    
    <item
	    android:id="@+id/MainActivity.MenuBookmarks"
	    android:title="@string/Bookmarks"
	    android:icon="@android:drawable/ic_menu_preferences"/>
    
    <item
	    android:id="@+id/MainActivity.MenuSharePage"
	    android:title="@string/SharePage"
	    android:icon="@android:drawable/ic_menu_share"/>
    
    <item
	    android:id="@+id/MainActivity.MenuSearch"
	    android:title="@string/Search"
	    android:icon="@android:drawable/ic_menu_search"/>
    
    <group android:id="@+id/MainActivity.AddonsMenuGroup"
        android:orderInCategory="1" />
    
	<item
	    android:id="@+id/MainActivity.MenuPreferences"
	    android:title="@string/Preferences"
	    android:icon="@android:drawable/ic_menu_preferences"
	    android:orderInCategory="2" />
    
</menu>